# XASortingGPT

./: .gitignore  decorator.py  define.py  defines.py  main.py  model.py  pyproject.toml  requirements.txt  sorting_hat.py  sortinghat.py  utils.py
GPTParser/: __init__.py  define.py  defines.py  gpt_parser.py  model.py  utils.py
